0.2
  - Add ocv_rectangle

0.1
  - Initial CRAN release