@@ -12,6 +12,7 @@ export(ocv_face)
 export(ocv_facemask)
 export(ocv_hog)
 export(ocv_info)
+export(ocv_keypoints)
 export(ocv_knn)
 export(ocv_markers)
 export(ocv_mog2)
